--- a/game-nerd/package.json
+++ b/game-nerd/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.37.0",
     "react-router": "^6.4.2",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
