--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,21 @@ name: CI
 
 on:
 	push:
-	branches: [ main ]
+		branches: [ main ]
+	pull_request:
+		branches: [ main ]
 
 jobs:
 	build:
 		runs-on: ubuntu-latest
 		env:
 			REACT_APP_BACKEND_BASE_URL: https://gamenerd-api.herokuapp.com/api
-			
+
 		steps:
-			- name: Checkout️
+			- name: Checkout 🛎️
 				uses: actions/checkout@v2.3.1
-				
-			- name: Install and Build 
+
+			- name: Install and Build 🔧 
 				run: |
 					yarn install --frozen-lockfile
 					yarn build
